force-app/main/default/objects/Apex_Batch_Control__c/Apex_Batch_Control__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>These are settings that can be used to implement some control over apex batch jobs.</description>
    <label>Apex Batch Control</label>
</CustomObject>