force-app/main/default/objects/Apex_Batch_Control__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should the job run?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>