force-app/main/default/objects/Apex_Batch_Control__c/fields/AdditionalEmails__c.field-meta.xml
<CustomField>
    <fullName>AdditionalEmails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter additional email addresses (comma separated) for batch status emails to be sent to.</inlineHelpText>
    <label>Additional Emails</label>
    <type>TextArea</type>
</CustomField>