force-app/main/default/objects/Apex_Batch_Control__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <inlineHelpText>This is used by the UpdateZipOwnershipController to allow the batches to be manually launched.</inlineHelpText>
    <label>Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>