force-app/main/default/objects/Apex_Batch_Control__c/fields/Check_Days__c.field-meta.xml
<CustomField>
    <fullName>Check_Days__c</fullName>
    <description>Number of days to look back in a query</description>
    <label>Check Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>