force-app/main/default/objects/Apex_Batch_Control__c/fields/Latest_Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Scheduled_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Scheduled Time</label>
    <type>DateTime</type>
</CustomField>