force-app/main/default/objects/Apex_Batch_Control__c/fields/Minutes_till_Launch__c.field-meta.xml
<CustomField>
    <fullName>Minutes_till_Launch__c</fullName>
    <label>Minutes till Launch</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>