force-app/main/default/objects/Apex_Batch_Control__c/fields/NbrOfAttempts__c.field-meta.xml
<CustomField>
    <fullName>NbrOfAttempts__c</fullName>
    <inlineHelpText>How many attempts to we make on each record?</inlineHelpText>
    <label>Nbr of Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>