force-app/main/default/objects/Apex_Batch_Control__c/fields/ProcessNotes__c.field-meta.xml
<CustomField>
    <fullName>ProcessNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes on processing</inlineHelpText>
    <label>Process Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>