force-app/main/default/objects/Apex_Batch_Control__c/fields/SaveAttachments__c.field-meta.xml
<CustomField>
    <fullName>SaveAttachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This can be a good debugging tool for jobs that send attachments.</description>
    <inlineHelpText>If there are attachments associated with this job, do you want a copy of the attachments saved on the job tracker record?</inlineHelpText>
    <label>Save Attachments?</label>
    <type>Checkbox</type>
</CustomField>