force-app/main/default/objects/Apex_Batch_Control__c/fields/SendCompletionEmail__c.field-meta.xml
<CustomField>
    <fullName>SendCompletionEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you always want an email sent to the job creator at the job completion, check this.</inlineHelpText>
    <label>Send Completion Email?</label>
    <type>Checkbox</type>
</CustomField>