force-app/main/default/objects/Apex_Batch_Control__c/fields/SendErrorEmail__c.field-meta.xml
<CustomField>
    <fullName>SendErrorEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you only want the error emails sent to the creator of the job? This is superseded by the Send Completion Email checkbox.</inlineHelpText>
    <label>Send Error Email?</label>
    <type>Checkbox</type>
</CustomField>