force-app/main/default/objects/Apex_Batch_Control__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <inlineHelpText>When displaying on the UpdateZipOwnershipController, the order the batches are listed</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>